- Fixed dark mode button not working on iOS - Add table rendering instead of PDFs

--- a/static/dark.css
+++ b/static/dark.css
@@ -2,4 +2,6 @@
     --background-color: #2b2d30;
     --header-color: #335fb0;
     --text-color: #b0bac5;
+    --header-background: #222225;
+    --table-line: #b0bac5;
 }
