--- a/static/default.css
+++ b/static/default.css
@@ -2,4 +2,6 @@
     --background-color: #62769b;
     --header-color: #204059;
     --text-color: #b0bac5;
+    --header-background: #475f88;
+    --table-line: #b0bac5;
 }
